objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of Survey.</description>
        <inlineHelpText>Date of Survey.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>CSN-Supplier</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Purpose (if specific)</description>
        <inlineHelpText>Purpose (if specific)</inlineHelpText>
        <label>Purpose</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10__c</fullName>
        <label>Q10</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q11__c</fullName>
        <label>Q11</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q12__c</fullName>
        <label>Q12</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R10__c</fullName>
        <label>R10</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>R11__c</fullName>
        <label>R11</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>R12__c</fullName>
        <label>R12</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>